# ComputersDontSee

./: CMakeLists.txt  LICENCE.txt  README.md  index.html  params.json
data/: frog_empty.m4v
include/: cds.hpp
include/cds/dsp/: dsp.hpp  ripples.hpp
include/cds/math/: derivatives.hpp  math.hpp  prox.hpp  thresholding.hpp
include/cds/motion/: motion.hpp
include/cds/tools/: quality.hpp  tools.hpp
include/cds/tv/: primaldual.hpp  tv.hpp
src/apps/: main_Inpainting.cpp  main_bg_subtract.cpp
src/bg_subtract_app/: main_bg_subtract.cpp
src/dct_denoising/: main_cds_dct_denoising.cpp
src/lib/: blobs.cpp  blobs.hpp  derivatives.cpp  derivatives.hpp  masking.cpp  masking.hpp  prox.cpp  prox.hpp  quality.cpp  tv.cpp  tv.hpp  viz.cpp  viz.hpp
src/lib/dsp/: ripples.cpp
src/lib/math/: derivatives.cpp  prox.cpp  thresholding.cpp
src/lib/motion/: blobs.cpp
src/lib/tools/: masking.cpp  quality.cpp  viz.cpp
src/lib/tv/: primaldual.cpp
src/ripples/: main_ripples.cpp
src/tv_inpainting_app/: main_tv_inpainting.cpp
